fix image height from stretching

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -16,6 +16,9 @@
   float: right
 
 html
+  img
+    height: auto
+
   font-family: Helvetica Neue,Helvetica,Arial,sans-serif
   background-color: #fdfdfd
   h1,h2,h3,h4,h5,h6
